# CSMM104X-Animation-CGI-Motion

./: README.md
t1m1/: stderr.txt  stdout.txt
t1m1/FOSSSim/: ExplicitEuler.cpp  SimpleGravityForce.cpp  TwoDScene.cpp
t1m2/FOSSSim/: DragDampingForce.cpp  GravitationalForce.cpp  SpringForce.cpp  SymplecticEuler.cpp
t1m3/: t1m3_myscene.xml
t1m3/FOSSSim/: DragDampingForce.cpp  GravitationalForce.cpp  LinearizedImplicitEuler.cpp  SpringForce.cpp
t2m1/FOSSSim/: PenaltyForce.cpp  SimpleCollisionHandler.cpp
t2m2/FOSSSim/: ContinuousTimeCollisionHandler.cpp  HybridCollisionHandler.cpp
t2m2/creative_scene/: creative_scene.xml
t2m3/: .codio  CMakeLists.txt
t2m3/FOSSSim/: CMakeLists.txt  ContestDetector.cpp
t2m3/creative_scene/: creative_scene.xml
t2m3/oracle/: FOSSSimOracleT2M3
t3m1/: .codio  CMakeLists.txt
t3m1/FOSSSim/: CMakeLists.txt
t3m1/FOSSSim/RigidBodies/: RigidBody.cpp  RigidBody.h  RigidBodyExplicitEuler.cpp  RigidBodyExplicitEuler.h  RigidBodyForce.h  RigidBodyGravityForce.cpp  RigidBodyGravityForce.h  RigidBodyScene.h  RigidBodySpringForce.cpp  RigidBodySpringForce.h  RigidBodyStepper.h  RigidBodySymplecticEuler.cpp  RigidBodySymplecticEuler.h  RigidBodyWindForce.cpp  RigidBodyWindForce.h
t3m1/cmake/: FindT3M1base.cmake
t3m1/oracle/: FOSSSimOracleT3M1
t3m2/: .codio  CMakeLists.txt
t3m2/FOSSSim/: CMakeLists.txt  MathUtilities.h
t3m2/FOSSSim/RigidBodies/: RigidBody.h  RigidBodyAllPairsCollisionDetector.cpp  RigidBodyAllPairsCollisionDetector.h  RigidBodyCollision.h  RigidBodyCollisionDetector.h  RigidBodyCollisionResolver.h  RigidBodyGRLCPCollisionResolver.cpp  RigidBodyGRLCPCollisionResolver.h  RigidBodyGRVelocityProjectionCollisionResolver.cpp  RigidBodyGRVelocityProjectionCollisionResolver.h  RigidBodyLCPCollisionResolver.cpp  RigidBodyLCPCollisionResolver.h  RigidBodyVelocityProjectionCollisionResolver.cpp  RigidBodyVelocityProjectionCollisionResolver.h
t3m2/cmake/: FindT3M2base.cmake
t4m1/: .codio
t4m1/FOSSSim/: CMakeLists.txt
t4m1/FOSSSim/ElasticBodies/: ElasticBodyBendingForce.cpp  ElasticBodyBendingForce.h  ElasticBodyCSTForce.cpp  ElasticBodyCSTForce.h  ElasticBodySpringForce.cpp  ElasticBodySpringForce.h
t4m1/assets/t4m1/BendingTests/: test10.xml  test11.xml  test12.xml  test13.xml  test14.xml  test15.xml  test16.xml  test17.xml  test18.xml
t4m1/assets/t4m1/CSTTests/: test00_implicit.xml  test01_implicit.xml  test02_implicit.xml  test03_implicit.xml  test04_implicit.xml  test05_implicit.xml  test06_implicit.xml  test07_implicit.xml  test08_implicit.xml  test09_implicit.xml  test10_implicit.xml  test11_implicit.xml  test12_implicit.xml  test13_implicit.xml  test14_implicit.xml  test15_implicit.xml
t4m1/cmake/: FindT4M1base.cmake
t4m1/oracle/: FOSSSimOracleT4M1
t5m1/: .codio  CMakeLists.txt
t5m1/FOSSSim/: CMakeLists.txt  MathDefines.h  MathUtilities.h
t5m1/FOSSSim/StableFluids/: StableFluidsSim.cpp  StableFluidsSim.h
t5m1/cmake/: FindT6M1base.cmake
t5m1/include/eigen/Eigen/src/StlSupport/: details.h
